# be/openapi_server/models/__init__.py
@@ -7,5 +7,7 @@ from openapi_server.models.segment import Segment
 from openapi_server.models.transcription import Transcription
 from openapi_server.models.transcription_data import TranscriptionData
 from openapi_server.models.transcription_post_request import TranscriptionPostRequest
+from openapi_server.models.transcription_transcription_id_export_get400_response import TranscriptionTranscriptionIdExportGet400Response
+from openapi_server.models.transcription_transcription_id_patch_request import TranscriptionTranscriptionIdPatchRequest
 from openapi_server.models.video_get200_response_inner import VideoGet200ResponseInner
 from openapi_server.models.word import Word
