# be/openapi_server/models/transcription_transcription_id_patch_request.py
@@ -1,0 +1,63 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server.models.transcription_data import TranscriptionData
+from openapi_server import util
+
+from openapi_server.models.transcription_data import TranscriptionData  # noqa: E501
+
+class TranscriptionTranscriptionIdPatchRequest(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, data=None):  # noqa: E501
+        """TranscriptionTranscriptionIdPatchRequest - a model defined in OpenAPI
+
+        :param data: The data of this TranscriptionTranscriptionIdPatchRequest.  # noqa: E501
+        :type data: TranscriptionData
+        """
+        self.openapi_types = {
+            'data': TranscriptionData
+        }
+
+        self.attribute_map = {
+            'data': 'data'
+        }
+
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'TranscriptionTranscriptionIdPatchRequest':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The _transcription__transcription_id__patch_request of this TranscriptionTranscriptionIdPatchRequest.  # noqa: E501
+        :rtype: TranscriptionTranscriptionIdPatchRequest
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data(self) -> TranscriptionData:
+        """Gets the data of this TranscriptionTranscriptionIdPatchRequest.
+
+
+        :return: The data of this TranscriptionTranscriptionIdPatchRequest.
+        :rtype: TranscriptionData
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: TranscriptionData):
+        """Sets the data of this TranscriptionTranscriptionIdPatchRequest.
+
+
+        :param data: The data of this TranscriptionTranscriptionIdPatchRequest.
+        :type data: TranscriptionData
+        """
+
+        self._data = data
